--- a/Assets/css/Styles.css
+++ b/Assets/css/Styles.css
@@ -16,14 +16,14 @@ html, body {
 
 /*variables*/
 :root {
-    --primary-color: #795548;
-    --secondary-color: #8BC34A;
-    --tertiary-color: #DCEDC8;
-    --quaternary-color: #FFF4D0;
+    --primary-color: #0E4D8D;
+    --secondary-color: #0D4B6D;
+    --tertiary-color: #C5CAE9;
+    --quaternary-color: #84A9C0;
     --white-color: #fff;
     --black-color: #1D1D1B;
     --font-light-color: #a8a8b3;
-    --font-dark-color: #737380;
+    --font-dark-color: #212121;
     --font-bold-color: #4f4f4f;
     --box_shadow-primary: 0px 6px 50px -20px rgba(0, 0, 0, 0.6);
     --lowText_font_size: 16px;
@@ -38,14 +38,14 @@ html, body {
     color: var(--primary-color);
     padding: 5px 10px;
     background-color: var(--tertiary-color);
-    border: 3px transparent;
+    border: 3px solid transparent;
     transition: all 300ms;
     border-radius: 50px;
     cursor: pointer;
   }
 
   .btn-small:hover {
-    border: 3px solid var(--primary-color);
+    border: solid var(--primary-color);
     color: var(--tertiary-color);
   }
 
@@ -417,8 +417,8 @@ header {
 .card_client {
     position: relative;
     text-align: center;
-    max-width: 300px;
-    max-height: 250px;
+    max-width: 400px;
+    max-height: 300px;
     border-radius: 20px;
     margin: 20px;
     padding: 30px;
